[package]
name = "fallible-option"
version = "0.1.0"
authors = ["Mathias Pius <contact@pius.io>"]
description = "Fallible is an Option with inverted Try-semantics."
keywords = ["error-handling", "result", "try"]
repository = "https://github.com/MathiasPius/fallible-option"
license = "MIT"
edition = "2021"
